<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"

    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_text_title_ShakeThreshold"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="32sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#2754CF"
        android:gravity="center"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="@string/tv_text_explaination_st"
        android:textColor="#3688CF"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/tv_text_explaination_st2"
        android:textColor="#3688CF"
        android:textSize="15sp" />

    <SeekBar
        android:id="@+id/skbThreshold"
        style="@style/Base.Widget.AppCompat.SeekBar"
        android:layout_width="354dp"
        android:layout_height="102dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/tvThresholdValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivShakeGif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/iv_contentDisc" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:onClick="saveSettings"
            android:text="@string/button_text_Save"
            android:textColor="#FFFFFF" />

    </RelativeLayout>

</LinearLayout>